fix: make sure span is really invisible

--- a/packages/core/src/components/tag-input/_resizable-input.scss
+++ b/packages/core/src/components/tag-input/_resizable-input.scss
@@ -8,4 +8,6 @@
   position: absolute;
   white-space: nowrap;
   z-index: -1;
+  opacity: 0;
+  overflow: hidden;
 }
